--- a/style.css
+++ b/style.css
@@ -1,6 +1,121 @@
+:root {
+  --color-accent: #172A3A;
+}
+
+html {
+  accent-color: var(--color-accent);
+}
+
+h1, h2, h3, h4, h5 {
+  line-height: 1.1;
+  text-wrap: balance;
+}
+
+h1 {
+  font-size: 400%;
+}
+
 body {
-  /* Set line height to 1.5 times the font size
-	   and use the OS’s UI font as the website font
-	 */
   font: 100%/1.5 system-ui;
+  max-width: 100ch;
+  margin-inline: max(1em, (100% - 100ch) / 2); /* This has to be fixed */
+  padding: 2em;
+}
+
+body img {
+  max-width: 300px;
+}
+
+nav {
+  display: flex;
+  border-bottom: 1px solid #D2D7DF;
+}
+
+nav a {
+  flex: 1; 
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+}
+
+nav a.current {
+  border-bottom: 0.4em solid #D2D7DF;
+  padding-bottom: 0.1em;
+}
+
+nav a:hover{
+  border-bottom: 0.4em solid var(--color-accent);
+  padding-bottom: 0.1em;
+  background-color: oklch(from var(--color-accent) 95% 5% h);
+
+}
+
+form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
+}
+
+label{
+  display: subgrid;
+  grid-template-columns: subgrid;
+}
+
+button {
+  grid-column: 1 / -1;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns:  repeat(auto-fill, minmax(15em, 1fr));
+  gap: 1em;
+}
+
+.projects article {
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+}
+
+
+.projects article h2 {
+  margin: 0;
+}
+
+.contact-info {
+  display: flex;
+  gap: 1em;
+  align-items: center;
+}
+
+contact h1, experience h2, education h2, skills h2 {
+  margin-bottom: 0.2em;
+  color: #002FA7;
+}
+
+.contact-info a {
+  margin: 0;
+  text-decoration: none;
+  color: inherit;
+}
+
+.contact-info p {
+  margin: 0;
+}
+
+experience span, education span {
+  display: flex;
+  justify-content: space-between;
+  overflow: wrap;
+  margin-block: 0.1em;
+}
+
+experience span i, education span i{
+  align-items: end;
+}
+
+experience span p, education span p  {
+  margin: 0;
+  padding: 0;
 }
