New file 'global.js' and nav bar revision

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 html {
   accent-color: var(--color-accent);
+  color-scheme: light dark;
 }
 
 h1, h2, h3, h4, h5 {
@@ -27,8 +28,9 @@ body img {
 }
 
 nav {
+  --border-color: oklch(50% 10% 200/40);
   display: flex;
-  border-bottom: 1px solid #D2D7DF;
+  border-bottom: 1px solid var(--border-color);
 }
 
 nav a {
@@ -40,14 +42,14 @@ nav a {
 }
 
 nav a.current {
-  border-bottom: 0.4em solid #D2D7DF;
+  border-bottom: 0.4em solid var(--border-color);
   padding-bottom: 0.1em;
 }
 
 nav a:hover{
   border-bottom: 0.4em solid var(--color-accent);
   padding-bottom: 0.1em;
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 
 }
 
@@ -118,4 +120,12 @@ experience span i, education span i{
 experience span p, education span p  {
   margin: 0;
   padding: 0;
+}
+
+.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 80%;
+  font-family: inherit;
 }
